--- a/formulario.html
+++ b/formulario.html
@@ -13,7 +13,7 @@
         <p id="subtitulo">Complete suas informações</p>
         <br>
     </div>
-<form>
+<form name="f_cadastro" method="POST" data-netlify="true">
     <fieldset class="grupo">
         <div class="campo">
             <label for="nome"><strong>Nome</strong></label>
